# agenthound

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  support_agent.py  test_support_agent.py
examples/fixtures/: claude_refund_flow.json  complex_conversation.json  error_recovery.json  multi_order_lookup.json  order_status_check.json  refund_denied.json  refund_happy_path.json  shipping_inquiry.json
src/agenthound/: __init__.py  _patching.py  assertions.py  auto_record.py  failures.py  mock_llm.py  mock_tool.py  models.py  plugin.py  recorder.py  replayer.py  transport.py
src/agenthound/adapters/: __init__.py  anthropic.py  openai.py
src/agenthound/importers/: __init__.py  otel.py
src/agenthound/ui/: app.py  cli.py  proxy.py  server.py
src/agenthound/ui/static/: index.html
src/agenthound/ui/static/assets/: index-DNg8ypt2.css  index-DpVIt-fh.js
tests/: test_assertions.py  test_failures.py  test_mock_llm.py  test_models.py  test_plugin.py  test_recorder.py  test_replayer.py  test_transport.py
tests/fixtures/: sample_session.json
ui-frontend/: index.html  package-lock.json  package.json  vite.config.js
ui-frontend/src/: App.jsx
ui-frontend/src/components/: Debugger.jsx  FixtureList.jsx  LiveIndicator.jsx  SessionList.jsx  Stats.jsx  StepInspector.jsx  Timeline.jsx
