[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthound"
version = "0.1.0"
description = "Tracks down every bug in your agent workflow."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "AgentHound Contributors" }]
keywords = ["testing", "ai", "agents", "llm", "pytest", "mock", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "pytest>=7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
ui = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = [
    "ruff>=0.4",
    "mypy>=1.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agenthound-ui = "agenthound.ui.app:main"
agenthound-import = "agenthound.importers.otel:cli_main"

[project.entry-points.pytest11]
agenthound = "agenthound.plugin"

[project.urls]
Homepage = "https://github.com/agenthound/agenthound"
Documentation = "https://agenthound.ai"
Repository = "https://github.com/agenthound/agenthound"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
